--- a/home.html
+++ b/home.html
@@ -2,7 +2,8 @@
 <!-- $Page header--><header class="page-header js-header">
 <div class="page-header__inner">
 <div class="page-header__logo">
-<h1><img src="http://pertamina.com/Media/logo.png" alt="Pertamina" style="width:150px;height:40px;"></h1>
+<h1><img src="https://www.geoalpha.org/uploads/1/0/8/4/108401319/published/logo2.png?1522048493
+" alt="Pertamina" style="width:150px;height:40px;"></h1>
 &nbsp;<span> </span></div>
 <nav class="page-header__nav js-nav">
 <ul>
