--- a/home.html
+++ b/home.html
@@ -62,11 +62,11 @@
 </ul>
 </div>
   
-</section>
-<!-- $Team section-->
+<!-- </section>
+$Team section
 
 <section class="team" id="team">
-<div class="team__inner">
+<div class="team__inner"> -->
  
 <!-- $Page footer--><footer class="page-footer">
 <div class="page-footer__inner"><span class="page-footer__copyright">&copy; 2018 Aldyth SUKAPRADJA [aldyth.sukapradja@pertamina.com] </span><a class="page-footer__gotop js-anchor" href="#home">Go to top</a></div>
