--- a/home.html
+++ b/home.html
@@ -69,6 +69,6 @@ $Team section
 <div class="team__inner"> -->
  
 <!-- $Page footer--><footer class="page-footer">
-<div class="page-footer__inner"><span class="page-footer__copyright">&copy; 2018 Aldyth SUKAPRADJA [aldyth.sukapradja@pertamina.com] </span><a class="page-footer__gotop js-anchor" href="#home">Go to top</a></div>
+<div class="page-footer__inner"><span class="page-footer__copyright">&copy; 2018 Aldyth SUKAPRADJA </span><a class="page-footer__gotop js-anchor" href="#home">Go to top</a></div>
 </footer>
 <script src="static/js/body.min.js"></script>
