--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
 <ul>
 <li><a class="page-header__nav-link js-anchor js-link is-active" href="#home">Home</a></li>
 <li><a class="page-header__nav-link js-anchor js-link" href="#portfolio">Digilibs ITF</a></li>
-<li><a class="page-header__nav-link js-anchor js-link" href="#team">Registration</a></li>
+<li><a class="page-header__nav-link js-anchor js-link" href="http://registration.aldyth.me">Registration</a></li>
 </ul>
 </nav></div>
 </header><!-- $Promo section-->
