--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
 <section class="promo js-jumbo" id="home">
 <h2 class="promo__title">Informal Technical<span>Forum</span></h2>
 <p class="promo__descr">est 2009</p>
-<a class="promo__btn" href="https://datastudio.google.com/open/1HaaJf5Y7fgitVZ4dW8affHlaFxFLmkUq">Upcoming ITF</a>
+<a class="promo__btn" href="http://project.geoalpha.org/">Upcoming ITF</a>
 <a class="promo__go-next js-anchor" href="#portfolio">Scroll down</a>
 
  </section>
